# aegis-fabric

./: .gitignore  ARCHITECTURE.md  CODEBASE.md  Dockerfile  Dockerfile.demo-agent  Dockerfile.operator  Makefile  README.md  README.zh-CN.md  ROADMAP.md  buf.gen.yaml  docker-compose.yml  go.mod  go.sum
.github/workflows/: docker-publish.yml
.gocache/: trim.txt
.gocache/00/: 003b83f3864b9dffffdf486cbb89bcd82e186f558a04fc9d67edf20aa8e8290e-d  007e5eebea6991fb5c0b3267f0b1d04d56aae67d3beeda93e79a698612371c2b-d  0092ff67a58d0d5d8dd4c6697399f9396c3c26970e2079d5b89a811016918e86-a  00946932aa4472acd0f387065fb980a1c686a39d52847233dc9dcf6be257579d-a  00b6c533d141bc1705170d678ef55fcfa92e34b90003b92dfc81e63a8fda9090-a  00ba88ea8a17dcbb33e94c16302af81913d685f5774ec2043782e3f48a0c52fd-a  00c120176a785a89acc0c8c20bf0b28060789bfcd51322c7f34e939b2c8d83f6-a  00cb55eaabb38c9e55be78a446bfff027137082dfff16b50f3e2dcab847c3a73-a  (+4 more)
scripts/: export_demo_snapshots.sh  gen_proto.sh  generate_demo_report.sh  generate_policy_tls.sh  kind-quickstart.sh  verify_http_gateway.sh  verify_modes.sh  verify_recursion_loop.sh
sdk/python/: README.md  pyproject.toml
sdk/python/afp_sdk/: __init__.py  client.py  exceptions.py  langgraph.py  tools.py
sdk/python/afp_sdk/pb/: __init__.py  sdk_ipc_pb2.py  sdk_ipc_pb2_grpc.py
sdk/python/examples/: langgraph_planner.py
sdk/python/scripts/: demo-agent-entrypoint.sh  gen_proto.sh
sdk/python/tests/: conftest.py  test_ipc_integration.py  test_langgraph_adapter.py  test_langgraph_integration.py
(+1807 files in other folders)
