[project]
name = "afp-sdk"
version = "0.1.0"
description = "Python SDK for AFP sidecar pre-flight IPC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "grpcio>=1.60",
  "protobuf>=4.25",
]

[project.optional-dependencies]
dev = [
  "grpcio-tools>=1.60",
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["afp_sdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
